--- a/featured-content-gallery2/css/featured-content-gallery2.big.css
+++ b/featured-content-gallery2/css/featured-content-gallery2.big.css
@@ -1,16 +1,16 @@
 @charset "utf-8";
 /* CSS Document */
 
-#featured_content_container { width: 600px; height: 300px; background-color: #222; border: 3px solid #333; text-align: left; position: relative; z-index: 0; }
+#featured_content_container { width: 100%; height: 300px; background-color: #222; border: 3px solid #333; text-align: left; position: relative; z-index: 0; }
 #featured_content_container ul { padding: 0; margin: 0; list-style: none; }
-#featured_content_container li.paused { padding: 0 5px; height: 22px; background-color: #000; color: #fff; text-align: center; font-size: 12px; line-height: 22px; position: absolute; left: 20px; z-index: 3; display: none; }
+#featured_content_container li.paused { padding: 0 5px; height: 22px; background-color: #000; color: #fff; text-align: center; font-size: 12px; line-height: 22px; position: absolute; left: 20px; z-index: 3; }
 #featured_content_container li.title { padding: 0 5px; height: 22px; background-color: #000; color: #fff; text-align: center; font-size: 12px; line-height: 22px; position: absolute; right: 20px; z-index: 3; }
-#featured_content_container li.image { cursor: pointer; width: 600px; height: 300px; position: absolute; z-index: 2; }
-#featured_content_container li.image img { width: 600px; height: 300px; }
-#featured_content_container li.description { width: 590px; position: absolute; bottom: 0px; background-color: #000; color: #fff; font-size: 12px; z-index: 3; padding: 5px 5px; }
+#featured_content_container li.image { cursor: pointer; width: 100%; height: 300px; position: absolute; z-index: 2; color: #000000; padding: 0px; margin: 0px;}
+#featured_content_container li.image img { width: 100%; height: 300px; position: relative; left: 0; bottom: 0; }
+#featured_content_container li.description { width: 98%; position: absolute; bottom: 0px; background-color: #000; color: #fff; font-size: 12px; z-index: 3; padding: 5px 1%; margin-left: 0px; }
 
 #featured_content_container li.title a { color: #fff; font-size: 12px; z-index: 3; }
 
-#featured_content_container .button {width: 50px;height: 50px;position: absolute;top: 45%;line-height: 50px;z-index: 4;}
+#featured_content_container .button {width: 50px;height: 50px;position: absolute;top: 45%;line-height: 50px; z-index: 4;}
 #featured_content_container #left_button {left: 0; background: url('img/left.png') no-repeat;}
 #featured_content_container #right_button {right: 0; background: url('img/right.png') no-repeat;}
